Fix z-index to keep off-canvas nav, overly on top

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@
   left: 0;
   right: 0;
   top: 0;
-  z-index: 16;
+  z-index: 18;
 
   @include bp($sidebar-switch-point) {
     display: none;
@@ -39,7 +39,7 @@
   left: 0;
   width: $sidebar-width;
   transition: left .15s ease;
-  z-index: 10;
+  z-index: 17;
 
   @include bp($sidebar-switch-point) {
     height: 100%;
@@ -131,7 +131,7 @@
   left: -18em;
   transition: left .15s ease;
   width: 0;
-  z-index: 9;
+  z-index: 17;
 
   &.on {
     @include bp-max($sidebar-switch-point) {
